--- a/BusAppCoreData/BusAppCoreData/Storyboard.storyboard
+++ b/BusAppCoreData/BusAppCoreData/Storyboard.storyboard
@@ -16,12 +16,12 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="519"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="grayyyyyLines" translatesAutoresizingMaskIntoConstraints="NO" id="XqE-ly-0iV">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="519"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="grayyyyyLines" translatesAutoresizingMaskIntoConstraints="NO" id="XqE-ly-0iV">
+                                <rect key="frame" x="0.0" y="64" width="320" height="455"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Hi2-Is-4AL">
-                                <rect key="frame" x="91" y="200" width="202" height="30"/>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Hi2-Is-4AL">
+                                <rect key="frame" x="84" y="206" width="216" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
@@ -29,15 +29,15 @@
                                     <outlet property="delegate" destination="c7x-8d-jaA" id="dr0-Bi-6HP"/>
                                 </connections>
                             </textField>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Endereço" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GKL-ok-vQk">
-                                <rect key="frame" x="20" y="213" width="69" height="17"/>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Endereço" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GKL-ok-vQk">
+                                <rect key="frame" x="13" y="212" width="69" height="17"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" name="Chalkduster" family="Chalkduster" pointSize="13"/>
                                 <color key="textColor" red="1" green="0.50196081399917603" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="pkp-b8-AHO">
-                                <rect key="frame" x="91" y="245" width="202" height="30"/>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="pkp-b8-AHO">
+                                <rect key="frame" x="84" y="244" width="216" height="31"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
@@ -45,22 +45,22 @@
                                     <outlet property="delegate" destination="c7x-8d-jaA" id="yzr-DO-sz0"/>
                                 </connections>
                             </textField>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Numero" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PiP-sZ-qo4">
-                                <rect key="frame" x="27" y="251" width="56" height="17"/>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Numero" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PiP-sZ-qo4">
+                                <rect key="frame" x="20" y="251" width="56" height="17"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" name="Chalkduster" family="Chalkduster" pointSize="13"/>
                                 <color key="textColor" red="1" green="0.50196081399917603" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Bairro" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uI6-0d-eOA">
-                                <rect key="frame" x="32" y="295" width="46" height="17"/>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Bairro" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uI6-0d-eOA">
+                                <rect key="frame" x="25" y="290" width="46" height="17"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" name="Chalkduster" family="Chalkduster" pointSize="13"/>
                                 <color key="textColor" red="1" green="0.50196081399917603" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="3CD-L3-m0P">
-                                <rect key="frame" x="91" y="289" width="202" height="30"/>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="3CD-L3-m0P">
+                                <rect key="frame" x="84" y="283" width="216" height="31"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
@@ -70,6 +70,29 @@
                             </textField>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="XqE-ly-0iV" firstAttribute="leading" secondItem="Ibk-Tz-A8I" secondAttribute="leading" id="4p8-EJ-yAu"/>
+                            <constraint firstItem="pkp-b8-AHO" firstAttribute="baseline" secondItem="PiP-sZ-qo4" secondAttribute="baseline" id="9ST-iW-hpd"/>
+                            <constraint firstItem="pkp-b8-AHO" firstAttribute="leading" secondItem="PiP-sZ-qo4" secondAttribute="trailing" constant="8" symbolic="YES" id="9h7-MJ-i7Z"/>
+                            <constraint firstItem="3CD-L3-m0P" firstAttribute="width" secondItem="pkp-b8-AHO" secondAttribute="width" id="9rh-9u-74c"/>
+                            <constraint firstItem="Hi2-Is-4AL" firstAttribute="width" secondItem="pkp-b8-AHO" secondAttribute="width" id="CtK-Ak-JTc"/>
+                            <constraint firstItem="pkp-b8-AHO" firstAttribute="top" secondItem="Hi2-Is-4AL" secondAttribute="bottom" constant="8" symbolic="YES" id="G9s-RB-pXg"/>
+                            <constraint firstItem="3CD-L3-m0P" firstAttribute="height" secondItem="pkp-b8-AHO" secondAttribute="height" id="H12-nG-Jrh"/>
+                            <constraint firstItem="3CD-L3-m0P" firstAttribute="top" secondItem="pkp-b8-AHO" secondAttribute="bottom" constant="8" symbolic="YES" id="IIS-26-cZL"/>
+                            <constraint firstAttribute="trailing" secondItem="XqE-ly-0iV" secondAttribute="trailing" id="L9h-bm-VhW"/>
+                            <constraint firstAttribute="centerY" secondItem="pkp-b8-AHO" secondAttribute="centerY" id="WuQ-o9-iNT"/>
+                            <constraint firstItem="3CD-L3-m0P" firstAttribute="centerX" secondItem="pkp-b8-AHO" secondAttribute="centerX" id="icz-iI-87Y"/>
+                            <constraint firstItem="uI6-0d-eOA" firstAttribute="centerX" secondItem="PiP-sZ-qo4" secondAttribute="centerX" id="itf-gG-Y9H"/>
+                            <constraint firstAttribute="bottom" secondItem="XqE-ly-0iV" secondAttribute="bottom" id="mJw-Nk-zuU"/>
+                            <constraint firstItem="3CD-L3-m0P" firstAttribute="baseline" secondItem="uI6-0d-eOA" secondAttribute="baseline" id="mu2-vX-AhB"/>
+                            <constraint firstAttribute="trailing" secondItem="pkp-b8-AHO" secondAttribute="trailing" constant="20" symbolic="YES" id="t0m-XU-sBX"/>
+                            <constraint firstItem="XqE-ly-0iV" firstAttribute="top" secondItem="56m-CF-hJE" secondAttribute="bottom" id="uCv-B7-584"/>
+                            <constraint firstItem="GKL-ok-vQk" firstAttribute="centerX" secondItem="PiP-sZ-qo4" secondAttribute="centerX" constant="-0.5" id="wc2-fA-1Ej"/>
+                            <constraint firstItem="PiP-sZ-qo4" firstAttribute="leading" secondItem="Ibk-Tz-A8I" secondAttribute="leading" constant="20" symbolic="YES" id="wi5-KQ-3ci"/>
+                            <constraint firstItem="GKL-ok-vQk" firstAttribute="baseline" secondItem="Hi2-Is-4AL" secondAttribute="baseline" id="zMi-RV-kZc"/>
+                            <constraint firstItem="Hi2-Is-4AL" firstAttribute="height" secondItem="pkp-b8-AHO" secondAttribute="height" id="zTu-DJ-dxI"/>
+                            <constraint firstItem="Hi2-Is-4AL" firstAttribute="centerX" secondItem="pkp-b8-AHO" secondAttribute="centerX" id="zaQ-KS-Cth"/>
+                        </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Por Endereço" image="ThePin" id="Edn-DG-KdW"/>
                     <navigationItem key="navigationItem" title="Endereço" id="ndi-Ac-HHd">
@@ -315,24 +338,24 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" alpha="0.69999999999999973" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="gray" translatesAutoresizingMaskIntoConstraints="NO" id="AP7-up-fLN">
-                                <rect key="frame" x="0.0" y="0.0" width="342" height="589"/>
+                            <imageView userInteractionEnabled="NO" alpha="0.74999999999999978" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="gray" translatesAutoresizingMaskIntoConstraints="NO" id="AP7-up-fLN">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Qp9-ed-BNq">
-                                <rect key="frame" x="75" y="209" width="171" height="150"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Qp9-ed-BNq">
+                                <rect key="frame" x="60" y="184" width="200" height="200"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="start" image="jjjjjjjjjj">
+                                <state key="normal" image="logo">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
                                     <action selector="lla:" destination="MWu-ZW-359" eventType="touchUpInside" id="qYk-kO-pGN"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="iBusão" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rqx-br-DJs">
-                                <rect key="frame" x="124" y="180" width="112" height="21"/>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="iBusão" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rqx-br-DJs">
+                                <rect key="frame" x="123" y="150" width="74" height="26"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" name="Chalkduster" family="Chalkduster" pointSize="17"/>
+                                <fontDescription key="fontDescription" name="Chalkduster" family="Chalkduster" pointSize="20"/>
                                 <color key="textColor" red="1" green="0.50196081400000003" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -340,7 +363,11 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="bottom" secondItem="AP7-up-fLN" secondAttribute="bottom" id="8SK-V2-zdI"/>
+                            <constraint firstAttribute="centerX" secondItem="Qp9-ed-BNq" secondAttribute="centerX" id="HUn-nR-r9c"/>
                             <constraint firstAttribute="trailing" secondItem="AP7-up-fLN" secondAttribute="trailing" id="JqJ-7p-49s"/>
+                            <constraint firstAttribute="centerY" secondItem="Qp9-ed-BNq" secondAttribute="centerY" id="LxB-0x-6x8"/>
+                            <constraint firstAttribute="centerX" secondItem="rqx-br-DJs" secondAttribute="centerX" id="gQo-oj-9Th"/>
+                            <constraint firstItem="Qp9-ed-BNq" firstAttribute="top" secondItem="rqx-br-DJs" secondAttribute="bottom" constant="8" symbolic="YES" id="i4b-fQ-Ro0"/>
                             <constraint firstItem="AP7-up-fLN" firstAttribute="leading" secondItem="lIy-eZ-Fp6" secondAttribute="leading" id="wH7-Eh-FM9"/>
                             <constraint firstItem="AP7-up-fLN" firstAttribute="top" secondItem="lIy-eZ-Fp6" secondAttribute="top" id="yN6-Zt-4WU"/>
                         </constraints>
@@ -613,7 +640,7 @@
         <image name="config_icon" width="32" height="32"/>
         <image name="gray" width="1906" height="1220"/>
         <image name="grayyyyyLines" width="1920" height="1080"/>
-        <image name="jjjjjjjjjj" width="560" height="528"/>
+        <image name="logo" width="200" height="200"/>
         <image name="menu" width="32" height="32"/>
     </resources>
     <color key="tintColor" red="1" green="0.75243891230000004" blue="0.36652966209999999" alpha="1" colorSpace="calibratedRGB"/>
